--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <groupId>bid.airss</groupId>
     <artifactId>java_basic_study</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>6.0.6</version>
+        </dependency>
 
+    </dependencies>
 
 </project>
