--- a/JavaCore/pom.xml
+++ b/JavaCore/pom.xml
@@ -14,7 +14,18 @@
     <properties>
         <servlet.version>3.0.1</servlet.version>
     </properties>
-
+    <dependencies>
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>jaxen</groupId>
+            <artifactId>jaxen</artifactId>
+            <version>1.1.6</version>
+        </dependency>
+    </dependencies>
     <build>
         <resources>
             <resource>
