--- a/JavaCore/pom.xml
+++ b/JavaCore/pom.xml
@@ -25,6 +25,10 @@
             <artifactId>jaxen</artifactId>
             <version>1.1.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-all</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <resources>
