--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>JavaCore</module>
-        <module>JavaEE</module>
         <module>servlet</module>
+        <module>activemq_demo</module>
     </modules>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
