--- a/J2EE/pom.xml
+++ b/J2EE/pom.xml
@@ -15,6 +15,11 @@
         <servlet.version>3.0.1</servlet.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>2.2.1</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
