--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>JavaCore</module>
-        <module>servlet</module>
-        <module>activemq_demo</module>
-        <module>rabbitmq_demo</module>
-        <module>kafka_demo</module>
+        <module>demos/servlet</module>
+        <module>demos/activemq_demo</module>
+        <module>demos/rabbitmq_demo</module>
+        <module>demos/kafka_demo</module>
         <module>J2EE</module>
     </modules>
     <dependencies>
