--- a/demos/servlet/pom.xml
+++ b/demos/servlet/pom.xml
@@ -6,6 +6,7 @@
         <groupId>bid.airss</groupId>
         <artifactId>java_study</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
