--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>demos/rabbitmq_demo</module>
         <module>demos/kafka_demo</module>
         <module>demos/activiti_demo</module>
+        <module>demos/spider_demo</module>
         <module>J2EE</module>
     </modules>
     <dependencies>
