--- a/Service/Mongodb/application.properties
+++ b/Service/Mongodb/application.properties
@@ -1,4 +1,4 @@
-##mongodb
-#spring.data.mongodb.uri= mongodb://$username:$password@localhost:27017
-#spring.data.mongodb.authentication-database=admin
-#spring.data.mongodb.database=db
+##mongodb.md
+#spring.data.mongodb.md.uri= mongodb.md://$username:$password@localhost:27017
+#spring.data.mongodb.md.authentication-database=admin
+#spring.data.mongodb.md.database=db
